# ballhunter

./: .clang-format  CMakeLists.txt  README.MD  generate-linux-proj.sh  generate-mac-proj.sh  generate-win-proj.bat  vcpkg.json
source/: Application.cpp  Application.h  main.cpp
source/common/: BasicTypes.cpp  BasicTypes.h  Logger.cpp  Logger.h  SmartPointer.h
source/engine/input/: InputContoller.cpp  InputContoller.h
source/engine/object/: Camera.cpp  Camera.h  Floor.cpp  Floor.h  GameObject.cpp  GameObject.h  Sphere.cpp  Sphere.h  Wall.cpp  Wall.h
source/engine/object/windows/: FloorImpl_DirectX.cpp  FloorImpl_DirectX.h  SphereImpl_DirectX.cpp  SphereImpl_DirectX.h  WallImpl_DirectX.cpp  WallImpl_DirectX.h
source/engine/physics/: Physics.cpp  Physics.h
source/engine/renderer/: IRenderable.h  IRenderer.h  RenderFactory.cpp  RenderFactory.h
source/engine/renderer/windows/: DXDeviceResources.cpp  DXDeviceResources.h  DXRenderingContext.cpp  DXRenderingContext.h  Renderer_DirectX.cpp  Renderer_DirectX.h
source/engine/utils/: StepTimer.cpp  StepTimer.h
source/game/: Ball.cpp  Ball.h  GameMain.cpp  GameMain.h  Ground.cpp  Ground.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Table.cpp  Table.h
